--- a/Project Euler/Files/Res/Storyboards/iPhone/MainStoryboard_iPhone.storyboard
+++ b/Project Euler/Files/Res/Storyboards/iPhone/MainStoryboard_iPhone.storyboard
@@ -285,7 +285,7 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="68A-Dj-xoW">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="235" type="user" id="i0m-pB-Z7a"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="228" type="user" id="i0m-pB-Z7a"/>
                                 </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -359,13 +359,13 @@
                             <constraint firstItem="7FS-fN-XOd" firstAttribute="trailing" secondItem="FE8-Kb-SuB" secondAttribute="trailing" type="default" id="J7I-ay-1Sj"/>
                             <constraint firstItem="zte-W2-whe" firstAttribute="trailing" secondItem="68A-Dj-xoW" secondAttribute="trailing" type="default" id="J8a-HV-OEn"/>
                             <constraint firstItem="FE8-Kb-SuB" firstAttribute="leading" secondItem="7FS-fN-XOd" secondAttribute="leading" type="default" id="Jop-Wg-Dld"/>
+                            <constraint firstItem="68A-Dj-xoW" firstAttribute="centerX" secondItem="g8w-Vm-9j5" secondAttribute="centerX" type="default" id="Mxv-yH-1la"/>
                             <constraint firstItem="NMG-Si-HvN" firstAttribute="top" secondItem="g8w-Vm-9j5" secondAttribute="top" constant="130" id="QgL-XU-Z3X"/>
                             <constraint firstItem="Qq1-jn-f9C" firstAttribute="leading" secondItem="68A-Dj-xoW" secondAttribute="leading" type="default" id="QsC-Ft-QgX"/>
                             <constraint firstItem="RPU-6n-VPf" firstAttribute="top" secondItem="g8w-Vm-9j5" secondAttribute="top" constant="54" id="TKE-Ot-uGM"/>
                             <constraint firstItem="Ypi-qg-ywm" firstAttribute="leading" secondItem="g8w-Vm-9j5" secondAttribute="leading" constant="41" id="Wga-b4-G7g"/>
                             <constraint firstItem="Ypi-qg-ywm" firstAttribute="top" secondItem="Qq1-jn-f9C" secondAttribute="top" type="default" id="aa6-bL-ngc"/>
                             <constraint firstItem="NMG-Si-HvN" firstAttribute="leading" secondItem="2bm-jV-Hoo" secondAttribute="leading" type="default" id="ads-ma-C2o"/>
-                            <constraint firstItem="RPU-6n-VPf" firstAttribute="centerX" secondItem="g8w-Vm-9j5" secondAttribute="centerX" type="default" id="apk-Zp-Nvu"/>
                             <constraint firstAttribute="bottom" secondItem="Tcn-bB-kkU" secondAttribute="bottom" constant="10" id="b1P-Gy-BKV"/>
                             <constraint firstItem="Roi-o8-Qg7" firstAttribute="trailing" secondItem="966-p5-ABN" secondAttribute="trailing" type="default" id="cJR-vh-DSJ"/>
                             <constraint firstItem="zte-W2-whe" firstAttribute="top" secondItem="Ypi-qg-ywm" secondAttribute="top" type="default" id="d0e-B4-CU5"/>
@@ -377,7 +377,7 @@
                             <constraint firstItem="07R-jS-Hnr" firstAttribute="top" secondItem="FE8-Kb-SuB" secondAttribute="top" type="default" id="iCX-rQ-CS0"/>
                             <constraint firstItem="5Ag-AW-pPG" firstAttribute="baseline" secondItem="Tcn-bB-kkU" secondAttribute="baseline" type="default" id="jQK-DS-5Pm"/>
                             <constraint firstItem="RPU-6n-VPf" firstAttribute="trailing" secondItem="7FS-fN-XOd" secondAttribute="trailing" type="default" id="lbe-yf-rT2"/>
-                            <constraint firstAttribute="bottom" secondItem="68A-Dj-xoW" secondAttribute="bottom" constant="30" type="user" id="nRY-3N-42U"/>
+                            <constraint firstAttribute="bottom" secondItem="68A-Dj-xoW" secondAttribute="bottom" constant="37" type="user" id="nRY-3N-42U"/>
                             <constraint firstItem="07R-jS-Hnr" firstAttribute="top" secondItem="g8w-Vm-9j5" secondAttribute="top" constant="5" id="nlk-XW-f2x"/>
                             <constraint firstItem="zte-W2-whe" firstAttribute="leading" secondItem="Roi-o8-Qg7" secondAttribute="leading" type="default" id="nu5-Na-rCl"/>
                             <constraint firstItem="DHb-ba-bDJ" firstAttribute="centerY" secondItem="zte-W2-whe" secondAttribute="centerY" type="default" id="pJM-gY-Msc"/>
@@ -428,50 +428,6 @@
             <point key="canvasLocation" x="256" y="101"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="CustomNavigationController" superclassName="UINavigationController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CustomNavigationController.h"/>
-        </class>
-        <class className="DetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="backButtonPressed:" candidateClass="UIButton"/>
-                <relationship kind="action" name="cancelButtonPressed:" candidateClass="UIButton"/>
-                <relationship kind="action" name="computeBruteForceButtonPressed:" candidateClass="UIButton"/>
-                <relationship kind="action" name="computeButtonPressed:" candidateClass="UIButton"/>
-                <relationship kind="action" name="showQuestionsTableViewButtonPressed:" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="_activityIndicatorView" candidateClass="UIActivityIndicatorView"/>
-                <relationship kind="outlet" name="_backButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="_bruteForceComputationTimeLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_cancelButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="_computationTimeLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_computeButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="_computeByBruteForceButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="_questionAnswerLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_questionDateLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_questionNumberLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_questionTextView" candidateClass="UITextView"/>
-                <relationship kind="outlet" name="_questionTitleLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_showQuestionsTableViewButton" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="QuestionCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/QuestionCell.h"/>
-            <relationships>
-                <relationship kind="action" name="questionButtonPressed:" candidateClass="UIButton"/>
-                <relationship kind="outletCollection" name="_buttons" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="_tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
